--- a/app/assets/views/catalog.pug
+++ b/app/assets/views/catalog.pug
@@ -15,127 +15,206 @@ block content
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
+                    .product__labels
+                        .product__labels-item.-purple- Новинка
+                        .product__labels-item.-green- Хит продаж
+
                     .product__img--wrap(style="background: #F0EEF7")
-                        img.product__img(src="img/content/home-catalog/product_0.png" width="213" height="213" alt="Name product")
-
-                    .product__info
-                        .product__title Chrono pro
-                        .product__price.price
-                            .price__current 5000 р
-
-            .product
-                .product__body
-                    a.product__link(href="#product" title="Go to product")
-
-                    .product__img--wrap(style="background: #F8F5F8")
-                        img.product__img(src="img/content/home-catalog/product_1.png" width="213" height="213" alt="Name product")
-
-                    .product__info
-                        .product__title Watch Lite
-                        .product__price.price
-                            .price__current 5000 р
-
-            .product
-                .product__body
-                    a.product__link(href="#product" title="Go to product")
-
-                    .product__img--wrap(style="background: #F8F5F8")
-                        img.product__img(src="img/content/home-catalog/product_2.png" width="213" height="213" alt="Name product")
+                        img.product__img(src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background:#99b6ee;")
-                            li.product__colors-item(style="background:#ffcbdb;")
-                            li.product__colors-item(style="background:#717171;")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
                     .product__info
                         .product__title KidGram Watch
+                        .product__desc Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров
                         .product__price.price
-                            .price__current 5000 р
+                            .price__current 7990 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
 
             .product
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
-                    .product__img--wrap(style="background: #F8F5F8")
-                        img.product__img(src="img/content/home-catalog/product_3.png" width="213" height="213" alt="Name product")
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product")
 
                         ul.product__colors-list
-                            li.product__colors-item(style="background:#99b6ee;")
-                            li.product__colors-item(style="background:#717171;")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/yellow.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/green.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/red.jpg');")
 
                     .product__info
-                        .product__title 4G Techo
+                        .product__title KidPhone Fresh 4G
+                        .product__desc Яркие и надежные  4G смарт-часы с GPS, аудио-видеозвонками, голосовым чатом, и удобной зарядкой USB-C.          
                         .product__price.price
-                            .price__current 5000 р
+                            .price__current 6990 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
 
             .product
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
-                    .product__img--wrap(style="background: #F8F5F8")
-                        img.product__img(src="img/content/home-catalog/product_4.png" width="213" height="213" alt="Name product")
+                    .product__labels
+                        .product__labels-item.-purple- Новинка
+
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product")
+
+                        ul.product__colors-list
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue.jpg');")
 
                     .product__info
-                        .product__title KidGram Watch
+                        .product__title KidPhone Techno 4G
+                        .product__desc Новые 4G/WiFi/GPS смарт-часы в стиле аниме с KidGram (Telegram с родительским контролем), другим контентом от VK, и...      
                         .product__price.price
-                            .price__current 5000 р
+                            .price__current 7490 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
 
             .product
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
-                    .product__img--wrap(style="background: #F8F5F8")
-                        img.product__img(src="img/content/home-catalog/product_5.png" width="213" height="213" alt="Name product")
+                    .product__labels
+                        .product__labels-item.-purple- Новинка
+                        .product__labels-item.-green- Хит продаж
+
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product")
+
+                        ul.product__colors-list
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/purple.jpg');")
 
                     .product__info
-                        .product__title 4G Techo
+                        .product__title 4G Wink
+                        .product__desc Многофункциональные часы-телефон с самым большим экраном, современным развивающим контентом, заботой...       
                         .product__price.price
-                            .price__current 5000 р
+                            .price__current 8990 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
 
             .product
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
-                    .product__img--wrap(style="background: #F8F5F8")
-                        img.product__img(src="img/content/home-catalog/product_6.png" width="213" height="213" alt="Name product")
+                    .product__labels
+                        .product__labels-item.-purple- Новинка
+                        .product__labels-item.-blue- Рекомендуем
+
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product")
+
+                        ul.product__colors-list
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/yellow.jpg');")
 
                     .product__info
-                        .product__title 4G Techo
+                        .product__title KidPhone 4G Lite
+                        .product__desc Классический узнаваемый дизайн, усовершенствованные характеристики и комбо новых функций.
                         .product__price.price
-                            .price__current 5000 р
+                            .price__current 5990 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
 
             .product
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
-                    .product__img--wrap(style="background: #F8F5F8")
-                        img.product__img(src="img/content/home-catalog/product_7.png" width="213" height="213" alt="Name product")
+                    .product__labels
+                        .product__labels-item.-purple- Новинка
+
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product")
+
+                        ul.product__colors-list
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/yellow.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/red.jpg');")
 
                     .product__info
-                        .product__title 4G Techo
+                        .product__title Kidphone 4GR M
+                        .product__desc Наш бестселлер - 4G/GPS/Wi-Fi смарт-часы c мессенджером KidGram (Telegram с родительским контролем), Марусей и...
                         .product__price.price
-                            .price__current 5000 р
+                            .price__current 7990 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
 
             .product
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
-                    .product__img--wrap(style="background: #F3F1F0")
-                        img.product__img(src="img/content/home-catalog/product_8.png" width="213" height="213" alt="Name product")
+                    .product__labels
+                        .product__labels-item.-purple- Новинка
+                        .product__labels-item.-green- Хит продаж
+
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_6.png" width="213" height="213" alt="Name product")
 
                     .product__info
-                        .product__title Chrono pro
-                        .product__price.price
-                            .price__current 5000 р
+                        .product__title KidPhone 4GR
+                        .product__desc Водонепроницаемые 4G часы-телефон с GPS/Wi-Fi-трекингом, MP3-плеером, Алисой от Яндекса и видеозвонками
+                
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
 
             .product
                 .product__body
                     a.product__link(href="#product" title="Go to product")
 
-                    .product__img--wrap(style="background: #F3F1F0")
-                        img.product__img(src="img/content/home-catalog/product_9.png" width="213" height="213" alt="Name product")
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product")
+
+                        ul.product__colors-list
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/black.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/green.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/purple-transparent.jpg');")
 
                     .product__info
-                        .product__title Watch Lite
+                        .product__title FixiTime Fun
+                        .product__desc Детские часы-телефон с трекингом, функцией SOS, камерой и защитой от влаги  
                         .product__price.price
-                            .price__current 5000 р  
+                            .price__current 3990 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+
+            .product
+                .product__body
+                    a.product__link(href="#product" title="Go to product")
+
+                    .product__img--wrap(style="background: #F0EEF7")
+                        img.product__img(src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product")
+
+                        ul.product__colors-list
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/pink-black.jpg');")
+                            li.product__colors-item(style="background-image: url('img/content/product-colors/blue-black.jpg');")
+
+                    .product__info
+                        .product__title KidPhone 2
+                        .product__desc Простая и функциональная модель часов-телефона с GPS и кнопкой SOS
+                        .product__price.price
+                            .price__current 3990 р
+
+                        .product__nav
+                            .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.btn--reset.btn--cart.product__cart(aria-label="Add cart")
+
