--- a/app/styles/blocks/catalog.sass
+++ b/app/styles/blocks/catalog.sass
@@ -3,3 +3,15 @@
         display: flex
         flex-wrap: wrap
         margin: * -6px -24px @md * -12px -48px @xl * -16px -64px
+
+    .product
+        width: 100% @sm 50% @md 33.3% @xl 25%
+
+        &__img--wrap
+            flex: 0
+            min-height: 200px @md 272px @xl 320px
+
+        &__info
+            display: flex
+            flex-direction: column
+            flex: 1
