--- a/app/styles/blocks/home-catalog.sass
+++ b/app/styles/blocks/home-catalog.sass
@@ -15,7 +15,13 @@
 
         &:first-child
             margin-top: @md-down 0
-        
+
+    .product
+        width: 50% @md 25%
+        padding: 0 6px @md 0 12px @xl 0 16px
+
+        &__body
+            min-height: 200px @md 312px @xl 444px
 
 .category
     &__link
@@ -79,7 +85,6 @@
             background: resolve("icons/arrow-right-light.svg") no-repeat center / contain
 
 .product
-    width: 50% @md 25%
     padding: 0 6px @md 0 12px @xl 0 16px
     margin-bottom: 24px @md 48px @xl 64px
             
@@ -87,9 +92,8 @@
         position: relative
         display: flex
         flex-direction: column
-        height: 100%
         overflow: hidden
-        min-height: 210px @md 312px @xl 444px
+        height: 100%
 
     &__link
         position: absolute 0
@@ -98,6 +102,42 @@
         &:hover
             & ~ .product__info .product__title
                 color: @lg #7373f5
+
+            & ~ .product__info .product__btn
+                color: @lg #fff
+                background: @lg #7373f5
+                border-color: @lg #7373f5
+
+                &:after
+                    filter: @lg brightness(0) invert(1)
+
+    &__labels
+        display: flex
+        flex-wrap: wrap
+        align-items: center
+
+        position: absolute
+        top: 12px @md 20px
+        left: 12px @md 20px
+        z-index: 9
+
+        &-item
+            color: #fff
+            text: 12px 20px @md 14px 24px
+            white-space: nowrap
+            background: #1d1d1f
+            margin-right: 12px
+            border-radius: 8px
+            padding: 0 8px
+
+            &.-purple-
+                background: linear-gradient(to left, rgba(126, 78, 205, 1.0), rgba(76, 29, 227, 1.0))
+
+            &.-blue-
+                background: linear-gradient(to left, rgba(0, 138, 255, 1.0), rgba(42, 71, 242, 1.0))
+
+            &.-green-
+                background: linear-gradient(to right, rgba(4, 170, 134, 1.0), rgba(87, 177, 95, 1.0))
 
     &__img
         mix-blend-mode: darken
@@ -114,6 +154,7 @@
             border-radius: 12px @md 24px @xl 40px
             padding: 12px
             --smooth-corners: 10
+            z-index: 3
             mask-image: paint(smooth-corners)
             -webkit-mask-image: paint(smooth-corners)
 
@@ -134,6 +175,9 @@
             border-radius: 50%
             size: 12px @xl 16px
             margin-right: 12px @xl 16px
+            background-repeat: no-repeat
+            background-position: center
+            background-size: cover
 
             &:last-child
                 margin: 0
@@ -147,11 +191,49 @@
         text: 600 14px @xl 20px
         transition: .2s
 
+    &__desc
+        text: 12px @xl 16px
+        margin-top: 8px
+        display: -webkit-box
+        -webkit-line-clamp: 3
+        -webkit-box-orient: vertical
+        overflow: hidden
+
     &__price
         margin-top: 8px @xl 12px
         
         .price__current
             text: 14px @xl 20px
+
+    &__nav
+        display: flex
+        align-items: center
+        justify-content: space-between
+        margin-top: auto
+        padding-top: 12px
+
+    &__btn
+        text: 14px
+        min-height: 32px
+        padding: 0 8px 0 16px
+
+        &::after
+            content: ''
+            size: 24px
+            min-width: 24px
+            background-image: resolve("icons/chevron-right-accent.svg") 
+            background-repeat: no-repeat 
+            background-position: center 
+            background-size: 14px @xl 18px
+            margin-left: 4px @xl 8px
+            transition: .2s
+
+    &__cart
+        z-index: 3
+        opacity: .7
+
+        &:hover
+            opacity: @lg 1
 
 .price
     &__current
