button pre-order

--- a/app/assets/views/catalog.pug
+++ b/app/assets/views/catalog.pug
@@ -175,6 +175,7 @@ block content
                 
                         .product__nav
                             .btn.btn--border-accent.product__btn Подробнее 
+                            button.btn.product__preorder(data-modal="modal-preorder" aria-label="Open modal") Предзаказ
 
             .product
                 .product__body
@@ -195,7 +196,8 @@ block content
                             .price__current 3990 р
 
                         .product__nav
-                            .btn.btn--border-accent.product__btn Подробнее 
+                            .btn.btn--border-accent.product__btn Подробнее
+                            button.btn.product__preorder(data-modal="modal-preorder" aria-label="Open modal") Предзаказ
 
             .product
                 .product__body
