--- a/app/assets/views/layouts/layout.pug
+++ b/app/assets/views/layouts/layout.pug
@@ -41,6 +41,8 @@ html(lang="ru" dir="ltr")
 
 		include ../inc/footer
 
+		include ../inc/modals
+
 		script(src="libs/swiper/swiper-bundle.min.js")
 		script(src="scripts/main.js")
 
